Fix the panel padding on mobile devices

--- a/core-bundle/contao/themes/flexible/styles/base/responsive.pcss
+++ b/core-bundle/contao/themes/flexible/styles/base/responsive.pcss
@@ -142,12 +142,7 @@
         display: none;
     }
 
-    .tl_panel, .tl_version_panel {
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-
-    .tl_listing_container, fieldset > .widget-group {
+    #tl_buttons > ul, .tl_panel, .tl_version_panel, .tl_listing_container, fieldset > .widget-group {
         padding-left: 10px;
         padding-right: 10px;
     }
